fix(student-timetable): text white space

--- a/src/app/pages/student-timetable/student-timetable.page.scss
+++ b/src/app/pages/student-timetable/student-timetable.page.scss
@@ -72,6 +72,10 @@ ion-segment.week-segment {
   display: none;
 }
 
+.white-space-normal{
+  white-space: normal !important;
+}
+
 @media (min-width: 576px) {
   .marker {
     display: none;
